Bericht: Ergebnis Korrektur gelesen.

--- a/Documentation/Report/Parts/Ergebnis.tex
+++ b/Documentation/Report/Parts/Ergebnis.tex
@@ -1,38 +1,39 @@
 \authoredSection{marco}{Ergebnis}
-\subsection{Features}
-\subsubsection{Dashboard}
-\begin{figure}[h]
+\vspace{-24pt}
+\begin{figure}[h!]
 	\centering
-  \includegraphics[width=0.5\textwidth]{Pictures/Dashboard}
-	\caption{Dashboard}
+  	\includegraphics[height=0.25\textheight]{Pictures/Dashboard}
+	\vspace{-12pt}	
+	\caption{Screenshot des Dashboards}
 	\label{fig1}
 \end{figure}
-
-Das Dashboard ist die zentrale Anlaufstelle der Applikation, dort haben wir einen Überblick über den Verlauf der Kontostände aller unserer Konten. In der Tabelle darunter haben wir die Möglichkeit alle Kontobewegungen nach zu verfolgen. 
-
-%bild
-
-\subsubsection{Filialfinder}
-\begin{figure}[h]
+\vspace{-12pt}
+\begin{figure}[h!]
 	\centering
-  \includegraphics[width=0.5\textwidth]{Pictures/filialfinder}
-	\caption{Googlemaps mit Filialmarkierungen}
+	\includegraphics[height=0.25\textheight]{Pictures/filialfinder}
+	\vspace{-12pt}	
+	\caption{Screenshot des Filialfinders}
 	\label{fig2}
 \end{figure}
-
-	Beim Filialfinder findet man eine Karte von Googlemaps mit Markierungen, welche die Standorte der einzelnen Filialen markieren. Mit einem Klick auf das Infosymbol gelangt man zur Filialseite auf der man die Öffnungszeiten nachschauen, aber auch eine Terminanfrage oder eine Sortenanfrage stellen kann. 
-
-\subsubsection{Sortenanfrage}
-%aktuelle Umrechnungskurse der europ. Zentralbank
-
-\begin{figure}[h]
+\vspace{-12pt}
+\begin{figure}[h!]
 	\centering
-  \includegraphics[width=0.5\textwidth]{Pictures/Sortenanfrage}
-	\caption{Filialseite mit Sortenanfrage Pop-Over}
+	\includegraphics[height=0.25\textheight]{Pictures/Sortenanfrage}
+	\vspace{-12pt}
+	\caption{Screenshot der Filialseite mit Sortenanfrage Pop-Over}
 	\label{fig3}
 \end{figure}
 
-	Mit einem Klick auf Sortenanfrage bekommt der Nutzer ein Pop-Over zu sehen, in welchem er seine Wunschwährung auswählen kann die entsprechenden Umrechnungskurse werden intern direkt von der Europäischen Zentralbank bezogen. Hat man die Summe, welche umgetauscht werden soll eingegeben, so kann man die Anfrage stellen und bekommt eine Nachricht, ob die gewünschte Währung in der gewünschten Höhe bei der gewünschten Filiale verfügbar ist.
+\pagebreak
+\subsection{Features}
+\subsubsection{Dashboard}
+Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir einen Überblick über den Verlauf der Kontostände aller unserer Konten. In der Tabelle darunter haben wir die Möglichkeit, alle Kontobewegungen nachzuverfolgen.
+
+\subsubsection{Filialfinder}
+	Beim Filialfinder findet man eine Karte von Apple Maps mit Markierungen, welche die Standorte der einzelnen Filialen markieren. Mit einem Klick auf das Infosymbol gelangt man zu einer Filialseite, auf der man die Öffnungszeiten nachschauen, aber auch eine Terminanfrage oder eine Sortenanfrage stellen kann.
+
+\subsubsection{Sortenanfrage}
+	Mit einem Klick auf Sortenanfrage bekommt der Nutzer ein Pop-Over zu sehen, in welchem er seine Wunschwährung auswählen kann. Die entsprechenden Umrechnungskurse werden intern direkt von der Europäischen Zentralbank bezogen. Hat man die Summe, welche umgetauscht werden soll eingegeben, so kann man die Anfrage stellen und bekommt eine Nachricht, ob die gewünschte Währung in der gewünschten Höhe bei der gewünschten Filiale verfügbar ist.
 
 \subsubsection{Authentifizierung}
 \begin{figure}[h]
@@ -43,17 +44,17 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation, dort haben wir eine
     \end{tabular}
 	\caption{Die Authentifizierungsstati\label{fig4}}
 \end{figure}
-
-	Im oberen rechten Rand der Applikation ist ein kleines Symbol in Form eines Schildes zu sehen, dieses gibt den Authentifizierungsstatus zurück. Ein Schild mit einem Ausrufezeichen symbolisiert eine fehlende Authentifizierung, ein Haken eine gültige Authentifizierung.
+\pagebreak
+\noindent	Im oberen rechten Rand der Applikation ist ein kleines Symbol in Form eines Schildes zu sehen; dieses gibt den Authentifizierungsstatus zurück. Ein Schild mit einem Ausrufezeichen symbolisiert eine fehlende Authentifizierung, ein Haken eine gültige Authentifizierung.
 
 	Solange das Gerät nicht authentifiziert ist, kann man einige Funktionen nicht benutzen, diese sind durch das Symbol mit dem geschlossenen Schloss gekennzeichnet.
 
-	Unter dem Menüpunkt Authentifizierung findet man ein kleines Comic vor. Dieses erläutert wie der Nutzer sein Gerät bei seiner Filiale authentifizieren kann. Außerdem wird der Nutzer auf seine Vorteile aufmerksam gemacht.
+	Unter dem Menüpunkt Authentifizierung findet man ein kleines Comic vor. Dieses erläutert, wie der Nutzer sein Gerät bei seiner Filiale authentifizieren kann. Außerdem wird der Nutzer auf seine Vorteile aufmerksam gemacht.
 
 \subsubsection{Überweisung}
-	Unter dem Menüpunkt Überweisung findet man ein ganz gewöhnliches Überweisungsformular, die Überweisung muss man abschließend noch mit einem Tan bestätigen.
+	Unter dem Menüpunkt Überweisung findet man ein ganz gewöhnliches Überweisungsformular, die Überweisung muss man abschließend noch mit einer TAN bestätigen.
 
-\subsubsection{Self-Service Station}
+\subsubsection{Self-Service-Station}
 \begin{figure}[h]
 	\centering
   \includegraphics[width=0.5\textwidth]{Pictures/SSverbunden}
@@ -61,9 +62,9 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation, dort haben wir eine
 	\label{fig5}
 \end{figure}
 
-	Bei der Self-Service Station haben wir die Möglichkeit, sofern wir mit dem Stationsgerät verbunden sind, drei verschiedene Aktionen eigenständig durchzuführen. Eine Umbuchung, Kontoauszüge anschauen und drucken, sowie Bescheinigungen ansehen, ausfüllen und ausdrucken gegeben falls direkt abschicken.
+\noindent	Bei der Self-Service-Station haben wir die Möglichkeit, sofern wir mit dem Stationsgerät verbunden sind, drei verschiedene Aktionen eigenständig durchzuführen. Eine Umbuchung, Kontoauszüge anschauen und drucken, sowie Bescheinigungen ansehen, ausfüllen und ausdrucken gegeben falls direkt abschicken.
 
-	Jede Auswahlmöglichkeit hat eine kleine Tabelle mit Inhalten, die den User erwarten, wenn er auf den entsprechenden Button drückt.
+	Jede Auswahlmöglichkeit hat eine Tabelle mit Inhalten, die den User erwarten, wenn er auf den entsprechenden Button drückt.
 
 \subsubsection{Bescheinigungen}
 \begin{figure}[h]
@@ -73,7 +74,7 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation, dort haben wir eine
 	\label{fig6}
 \end{figure}
 
-Bei den Bescheinigungen sehen wir verschiedene von der Bank zur Verfügung gestellten Dokumente die der Nutzer auswählen kann.
+	Bei den Bescheinigungen sehen wir verschiedene von der Bank zur Verfügung gestellte Dokumente, die der Nutzer auswählen kann. Insbesondere sind beispielsweise sind Aktionen wie eine Kontoeröffnung möglich, für die man normalerweise am Schalter anstehen müsste.
 
 \subsubsection{Kontoauszüge}
 \begin{figure}[h]
@@ -83,7 +84,7 @@ Bei den Bescheinigungen sehen wir verschiedene von der Bank zur Verfügung geste
 	\label{fig7}
 \end{figure}
 
-	Im Kontoauszugsbildschirm kann man Kontoaktivitäten in einem bestimmten Zeitraum drucken lassen. Somit kann man auch Kontoauszüge ausdrucken, welche man beispielsweise verloren hat und muss dies nicht beim Schalter beantragen.
+	Im Kontoauszugsbildschirm kann man Kontoaktivitäten in einem bestimmten Zeitraum drucken lassen. Somit integriert die Station den althergebrachten Kontoauszugsdrucker und gibt ihm eine zeitgemäßere Oberfläche.
 
 \subsubsection{Umbuchungen}
 \begin{figure}[h]
@@ -93,7 +94,7 @@ Bei den Bescheinigungen sehen wir verschiedene von der Bank zur Verfügung geste
 	\label{fig8}
 \end{figure}
 
-	Im Umbuchungsbildschirm kann der Nutzer sowohl Ziel- als auch Quellkonto auswählen, zwischen denen der angegebene Betrag transferiert werden soll. Das ganze wird wird mit einem Button bestätigt.
+	Im Umbuchungsbildschirm kann der Nutzer sowohl Ziel- als auch Quellkonto auswählen, zwischen denen der angegebene Betrag transferiert werden soll. Das ganze wird wird mit einem Button bestätigt. Insbesondere wird hier das klassische Sparbuch um eine komfortable Umbuchungsfunktionalität erweitert, ohne dass dessen filialgebundener Charakter verloren ginge.
 
 \subsubsection{Finanzierungsrechner}
 \begin{figure}[h]
@@ -131,11 +132,11 @@ Bei den Bescheinigungen sehen wir verschiedene von der Bank zur Verfügung geste
 	\caption{Eigenkreationen für das Design\label{fig11}}
 \end{figure}
 
-Um unserer Applikation in mancher Hinsicht besser auf unsere Bedürfnisse anzupassen haben wir uns bei einigen Designelementen über die Standardimplementierungen von Apple hinweggesetzt. Dennoch blieben die iOS7 Richtlinien ein Qualitätsmaßstab für uns.
+Um unserer Applikation in mancher Hinsicht besser auf unsere Bedürfnisse anzupassen, haben wir uns bei einigen Designelementen über die Standardimplementierungen von Apple hinweggesetzt. Dennoch blieben die iOS 7 Richtlinien ein Qualitätsmaßstab für uns.
 
 Wie in (A) zu sehen ist, bekam unser Schieberegler als kleine Erweiterung eine schwarze Sprechblase, welche den aktuellen Wert anzeigt. Dies ist unter anderem für die Bedienbarkeit implementiert worden, damit man beim Verschieben des Regler nicht immer auf die linke Seite schauen muss um den aktuellen Wert abzulesen.
 
-Die mitgegebenen Textfelder von Apple haben in der Regel immer einen Text, welcher dem Nutzer einen Hinweis gibt was für ein Inhalt erwartet wird. Diese Umsetzung sieht oftmals unschön aus und nimmt viel Platz ein. Mit unserer Implementierung (B) verliert das Textfeld keine Funktionalität ist aber schlanker.
+Die mitgegebenen Textfelder von Apple haben in der Regel immer einen Text, welcher dem Nutzer einen Hinweis gibt, was für ein Inhalt erwartet wird. Diese Umsetzung sieht oftmals unschön aus und nimmt viel Platz ein. Mit unserer Implementierung (B) verliert das Textfeld keine Funktionalität, ist aber schlanker.
 
 Die Standard Pop-Over lassen sich nur bedingt anpassen. So konnten wir die Farbe des Buttons nicht in unserem Farbton einfärben. Daher mussten wir auf eine Eigenimplementation (C) zurückgreifen um die Konsistenz zu wahren.
 
@@ -151,8 +152,8 @@ Die Standard Pop-Over lassen sich nur bedingt anpassen. So konnten wir die Farbe
 %
 %Wir als Entwickler konnten natürlich die Bank in ihrem Wesen nicht verändern, die Einführung von neuer Hardware mit der Self-Service Station war schon das Maximum an Veränderung die wir Einfordern konnten.
 
-	Eine Herausforderung geht auch immer mit einer neuen Programmiersprache und deren Entwicklungsumgebung einher. Die ersten Wochen hatten wir eine relativ geringer Produktivität, weil wir uns auf diese Gegebenheiten erst einstellen mussten. Je weiter jedoch das Projekt voranschritt, desto sicherer fühlten wir uns in Objective-C und im Umgang mit Xcode.
+	Eine Herausforderung geht auch immer mit einer neuen Programmiersprache und deren Entwicklungsumgebung einher. Die ersten Wochen hatten wir somit erwartungsgemäß etwas geringere Produktivität, weil wir uns auf diese Gegebenheiten erst einstellen mussten. Je weiter jedoch das Projekt voranschritt, desto sicherer fühlten wir uns in Objective-C und im Umgang mit X-Code.
 
 	Während der Entwicklung stießen wir auch immer wieder auf Einschränkungen seitens Apple bezüglich der Standard GUI-Elemente. So konnten wir beispielsweise die Tint-Color eines Buttons im Pop-Over nicht ändern. Apple lässt es nicht zu. So mussten wir unser eigenes Pop-Over implementieren.
 
-	Nichtsdestotrotz konnten wir alle größeren und kleineren Herausforderungen meistern und hatten nie das Gefühl vor einem unüberwindbaren Problem zu stehen.
+	Nichtsdestotrotz konnten wir mit Unterstützung der Betreuer alle größeren und kleineren Herausforderungen bewältigen und hatten nie das Gefühl, vor einem unüberwindbaren Problem zu stehen.
